Add facet for date created